Fixed Typo & LinkedIn Error

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Hayden Webb Portfolio"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hayden Webb"
   avatar           : "profile.png"
-  bio              : "Undergraduate Research Assistant & Future Roboticst"
+  bio              : "Undergraduate Research Assistant & Future Roboticist"
   location         : "Houston, TX"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/hayden-webb/"
+  linkedin         : "hayden-webb"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
