--- a/_config.yml
+++ b/_config.yml
@@ -81,10 +81,10 @@ analytics:
 # Site Author
 author:
   name             : "Hayden Webb"
-  avatar           : "profile.png"
+  avatar           : "Hayden Webb.jpg"
   bio              : "Undergraduate Research Assistant & Future Roboticist"
   location         : "Houston, TX"
-  employer         :
+  employer         : "Rice University"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            : "hayden.m.webb@rice.edu"
