--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,18 @@
 # Authors
 
-Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+Hayden Webb:
+  name        : "Hayden Webb"
+  uri         : "http://webbhayden.com"
+  email       : "hayden.m.webb@rice.edu"
+  bio         : "Undergraduate Research Assistant & Future Roboticist"
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+  twitter     : "N/A"
+  google_plus : "N/A"
 
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
+#Name2 Name2:
+#  name        : "Name2 Name2"
+#  email       : "name2@name2.com"
+#  bio         : "I ordered what?"
+# avatar      : "bio-photo.jpg"
+#  twitter     : "name2"
+#  google_plus : "Name"
