--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hayden Webb"
-  avatar           : "Hayden Webb.jpg"
+  avatar           : "Hayden Webb PFP.jpg"
   bio              : "Undergraduate Research Assistant & Future Roboticist"
   location         : "Houston, TX"
   employer         : "Rice University"
