Modified Content to better match personal information

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ Hayden Webb:
   uri         : "http://webbhayden.com"
   email       : "hayden.m.webb@rice.edu"
   bio         : "Undergraduate Research Assistant & Future Roboticist"
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "Hayden Webb PFP.jpg"
   twitter     : "N/A"
   google_plus : "N/A"
 
