--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,3 +14,9 @@ main:
     
   - title: "Guide"
     url: /markdown/
+
+  - #title: "Talks"
+    #url: /talks/   
+
+  - #title: "Blog Posts"
+    #url: /year-archive/
