--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Hayden Webb"
-  avatar           : "Hayden Webb PFP.jpg"
-  bio              : "Undergraduate Research Assistant & Future Roboticist"
+  avatar           : "Headshot - Hayden Webb.png"
+  bio              : "Undergraduate Researcher & Future Roboticist"
   location         : #"Houston, TX"
   employer         : "Rice University"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
