--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hayden Webb"
-  avatar           : "Headshot - Hayden Webb.png"
+  avatar           : "Headshot - Hayden Webb.jpg"
   bio              : "Undergraduate Researcher & Future Roboticist"
   location         : #"Houston, TX"
   employer         : "Rice University"
